--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,16 @@
 </head>
 <body>
 
+<%= link_to 'SeatYourself', restaurants_path %>
+
 <%= yield %>
 
+<p class="userinfo">
+  <% if current_user %>
+    Signed in as <%= current_user.email %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
+  <% else %>
+    <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_diner_path %>
+  <% end %>
+</p>
 </body>
 </html>
